--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ LazyData: true
 RoxygenNote: 7.2.2
 Imports:
     xml2
+URL: https://github.com/chrisandrewsphd/FORUMVF
+BugReports: https://github.com/chrisandrewsphd/FORUMVF/issues
