Added two more functions. In particular I hope that xml_extract_points can replace the existing pattern-specific functions.  Still need to develop a directory version of this function, either to use for a directory of tests of the same TestPattern or for a directory with mixed TestPatterns.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,7 @@
 export(plot_visual_field)
 export(xml_dir_extract)
 export(xml_extract)
+export(xml_extract_points)
+export(xml_points10dash2)
 export(xml_points24dash2)
 export(xml_points30dash2)
