Not sure what requires R 2.10 that didn't before.  This is a really old requirement!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ Imports:
     graphics
 URL: https://github.com/chrisandrewsphd/FORUMVF
 BugReports: https://github.com/chrisandrewsphd/FORUMVF/issues
+Depends: 
+    R (>= 2.10)
