--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(plot_visual_field)
 export(xml_dir_extract)
+export(xml_dir_extract_points)
 export(xml_extract)
 export(xml_extract_points)
 export(xml_points10dash2)
