--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(plot_visual_field)
 export(xml_dir_explode)
 export(xml_dir_extract)
+export(xml_dir_extract_full)
 export(xml_dir_extract_points)
 export(xml_extract)
 export(xml_extract_points)
