--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(xml_dir_extract)
 export(xml_dir_extract_full)
 export(xml_dir_extract_points)
 export(xml_extract)
+export(xml_extract_full)
 export(xml_extract_points)
 export(xml_points10dash2)
 export(xml_points24dash2)
